--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "pm2": "^5.2.2"
   }
