--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.11.1",
+    "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -31,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "pm2": "^5.2.2"
   }
 }
